use solid lines for tree and grid lines, add horizontal and vertical spacing, fix line-colors, update header and header button styles to be less attention grabbing

--- a/scss/gtk-3.0/components/_treeview.scss
+++ b/scss/gtk-3.0/components/_treeview.scss
@@ -1,16 +1,16 @@
-// TODO: add more spacing around arrows
-// TODO: full width separator
-// TODO: padding-left for every but first column
-// TODO: use dashed tree-lines
-// TODO: header column separation
+// TODO: check if full width horizontal separators are possible
 
 treeview {
   -GtkTreeView-expander-size: 13;
+  -GtkTreeView-grid-line-pattern: '';
+  -GtkTreeView-tree-line-pattern: '';
+  -GtkTreeView-horizontal-separator: 8;
+  -GtkTreeView-vertical-separator: 8;
 
   background: $background-2;
 
-  border-left-color: foreground($background-3, 10%); // TODO: check if there is going to be a new way to define tree-lines
-  border-top-color: foreground($background-3, 10%); // TODO: check if there is going to be a new way to define column-lines
+  border-left-color: $background-3; // TODO: check if there is going to be a new way to define tree-lines
+  border-top-color: $background-3; // TODO: check if there is going to be a new way to define column-lines
 
   &:hover {
     background: lighten($background-2, 3%);
@@ -28,9 +28,17 @@ treeview {
   }
 
   header {
-    background: $background-3;
     button {
-      background: $background-3;
+      border-bottom: 1px solid $background-3;
+      background: $background-2;
+
+      &:hover {
+        background: $background-3;
+      }
+
+      &:not(:last-child) {
+        border-right: 1px solid $background-3;
+      }
     }
   }
 }
